-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0, 6.2.1
-
None
-
Windows 10, MSVC 2019
-
-
56a0753415 (qt/qtdeclarative/dev) 56a0753415 (qt/tqtc-qtdeclarative/dev) af9acf56f9 (qt/qtdeclarative/6.3) af9acf56f9 (qt/tqtc-qtdeclarative/6.3) fd1cfc2e7b (qt/qtdeclarative/6.2) fd1cfc2e7b (qt/tqtc-qtdeclarative/6.2) 2da5d5468b (qt/qtdeclarative/6.3.0)
MouseArea loses hover when cursor is inside of nested MouseArea,
It works as expected if nested MouseArea is a first-level child.
MouseArea {
hoverEnabled: true
...
MouseArea {
hoverEnabled: true
...
}
...
}
But it looses hover if nested MouseArea is "indirect" child, e.g.
MouseArea {
hoverEnabled: true
...
Rectangle {
...
MouseArea {
hoverEnabled: true
...
}
...
}
...
}
Reproduces at least on Windows 10 with Qt 6.2.0 (MSVC 2019).
Regression from Qt 5.15.2
See attached example.
- relates to
-
QTBUG-100543 [REG 5.15.2-6.2.2] Control doesn't propagate hover to his parent
-
- Closed
-
-
QTBUG-98850 [REG 6.1->6.2] HoverHandler doesn't get hoverevents, when a button is on the parent
-
- Closed
-
| For Gerrit Dashboard: QTBUG-95726 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 385524,2 | Properly propagate hover events to all parent mouse areas | dev | qt/qtdeclarative | Status: ABANDONED | +1 | 0 |
| 400735,8 | QQuickMouseArea: let MouseArea reject hover events | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 402837,2 | QQuickMouseArea: let MouseArea reject hover events | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 402838,2 | QQuickMouseArea: let MouseArea reject hover events | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 404398,2 | QQuickMouseArea: let MouseArea reject hover events | 6.3.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |