QQuickMouseArea: let MouseArea reject hover events

From testing Qt 6.1, a MouseArea should not accept hover
events, and as such, block hover events from propagating.
This patch will make sure that QQuickMouseArea rejects hover
events, and thereby restore the behavior Qt had up till Qt 6.1.

Fixes: QTBUG-95726
Fixes: QTBUG-95398
Change-Id: I1b929092a3004dd47ef1b6d1a957837ccedc7390
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 56a075341514db1242a0852ccf0fbe98e1fcabbc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>