src/quick/items/qquickmousearea.cpp
@@ -849,14 +849,8 @@ void QQuickMouseArea::hoverEnterEvent(QHoverEvent *event)
         me.setPosition(d->lastPos);
     }
 
-    if (auto parentMouseArea = qobject_cast<QQuickMouseArea *>(parentItem())) {
-        if (parentMouseArea->acceptHoverEvents()) {
-            // Special legacy case: if our parent is another MouseArea, and we're
-            // hovered, the parent MouseArea should be hovered too. We achieve this
-            // by simply ignoring the event to not block propagation.
-            event->ignore();
-        }
-    }
+    // A MouseArea should not block hover events
+    event->ignore();
 }
 
 void QQuickMouseArea::hoverMoveEvent(QHoverEvent *event)
@@ -876,14 +870,8 @@ void QQuickMouseArea::hoverMoveEvent(QHoverEvent *event)
         emit positionChanged(&me);
     }
 
-    if (auto parentMouseArea = qobject_cast<QQuickMouseArea *>(parentItem())) {
-        if (parentMouseArea->acceptHoverEvents()) {
-            // Special legacy case: if our parent is another MouseArea, and we're
-            // hovered, the parent MouseArea should be hovered too. We achieve this
-            // by simply ignoring the event to not block propagation.
-            event->ignore();
-        }
-    }
+    // A MouseArea should not block hover events
+    event->ignore();
 }
 
 void QQuickMouseArea::hoverLeaveEvent(QHoverEvent *event)
@@ -894,14 +882,8 @@ void QQuickMouseArea::hoverLeaveEvent(QHoverEvent *event)
     else
         setHovered(false);
 
-    if (auto parentMouseArea = qobject_cast<QQuickMouseArea *>(parentItem())) {
-        if (parentMouseArea->acceptHoverEvents()) {
-            // Special legacy case: if our parent is another MouseArea, and we're
-            // hovered, the parent MouseArea should be hovered too. We achieve this
-            // by simply ignoring the event to not block propagation.
-            event->ignore();
-        }
-    }
+    // A MouseArea should not block hover events
+    event->ignore();
 }
 
 #if QT_CONFIG(wheelevent)
